# FastRules

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  3phases.md  ALL_BUILD.vcxproj  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  COMPLETED_WORK.md  CONTRIBUTING.md  CTestTestfile.cmake  FINAL_STATUS.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE.txt  PERFORMANCE_BENCHMARKS.md  PROJECT_REVIEW.md  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  all_examples_summary.csv  build.ps1  build_output.txt  build_result.txt  cmake_install.cmake  completed_tasks.md  conanfile.py  console_logging_example.vcxproj  console_logging_example.vcxproj.filters  core_only_example.vcxproj  core_only_example.vcxproj.filters  custom_methods_example.vcxproj  custom_methods_example.vcxproj.filters  debug_context.vcxproj  debug_context.vcxproj.filters  (+34 more)
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: copy_test_dlls.cmake  fastrules-config.cmake.in
docs/: ARCHITECTURE.md  DB_EXTENSION_SETUP.md  Doxyfile  GETTING_STARTED.md  Gemfile  MIGRATION.md  _config.yml  adaptive-execution.md  architecture.md  c_api.md  changelog.md  concepts.md  contributing.md  coverage.md  db_extension_setup.md  examples.md  getting_started.md  index.md  installation.md  logging.md  lua-compatibility.md  migration.md  observability.md  parallel-execution.md  performance.md  predicates.md  security.md  troubleshooting.md
examples/: CMakeLists.txt  aot_compiler_example.cpp  comprehensive_example.cpp  console_logging_example.cpp  core_only_example.cpp  coroutine_example.cpp  custom_methods_example.cpp  debug_context.cpp  input_validator_example.cpp  loop_example.cpp  luabridge3_basic_example.cpp  macro_example.cpp  memory_pool_example.cpp  multi_object_example.cpp  no_globals_example.cpp  parent_child_example.cpp  path_utils.hpp  performance_test.cpp  repl_example.cpp  sandbox_example.cpp  simple_example.cpp  timeout_executor_example.cpp  typed_example.cpp  workflow_bubble_up.cpp
examples/c_api/: README.md  fastrules_c_api.cpp  fastrules_c_api.h
examples/csharp_example/: FastRulesExample.cs  FastRulesExample.csproj  README.md
examples/python_example/: README.md  fastrules_c_api.cpp  fastrules_c_api.h  fastrules_example.py
extensions/: CMakeLists.txt  IMPLEMENTATION.md  README.md
extensions/db/: CMakeLists.txt
extensions/db/examples/: CMakeLists.txt  db_example.cpp
extensions/db/include/fastrules/: db_bool.hpp  db_repository.hpp
extensions/db/src/: db_repository.cpp
extensions/db/stress/: CMakeLists.txt  db_stress.cpp
extensions/db/tests/: CMakeLists.txt  test_db_repository.cpp  test_db_repository_extended.cpp  test_main.cpp
extensions/include/fastrules/: repository.hpp
extensions/json/: CMakeLists.txt
extensions/json/examples/: CMakeLists.txt  customer_rules.json  customer_validation.json  customer_validation_simple.json  dependency_rules.json  example_customer_rules.cpp  example_customer_validation.cpp  example_customer_validation_simple.cpp  example_dependency_rules.cpp  example_hierarchical_rules.cpp  hierarchical_rules.json  json_example.cpp
extensions/json/include/fastrules/: json_loader.hpp  json_repository.hpp  json_serialization.hpp
extensions/json/src/: json_loader.cpp  json_repository.cpp  json_serialization.cpp
extensions/json/stress/: CMakeLists.txt  json_stress.cpp
extensions/json/tests/: CMakeLists.txt  test_json_loader.cpp  test_json_repository.cpp  test_json_repository_extended.cpp  test_json_xml_roundtrip.cpp  test_main.cpp
extensions/xml/: CMakeLists.txt
extensions/xml/examples/: CMakeLists.txt  customer_rules.xml  customer_validation.xml  customer_validation_simple.xml  dependency_rules.xml  example_customer_rules.cpp  example_customer_validation.cpp  example_customer_validation_simple.cpp  example_dependency_rules.cpp  example_hierarchical_rules.cpp  hierarchical_rules.xml  xml_example.cpp
extensions/xml/include/fastrules/: xml_loader.hpp  xml_repository.hpp  xml_serialization.hpp
extensions/xml/src/: xml_loader.cpp  xml_repository.cpp  xml_serialization.cpp
extensions/xml/stress/: CMakeLists.txt  xml_stress.cpp
extensions/xml/tests/: CMakeLists.txt  test_main.cpp  test_xml_repository.cpp  test_xml_repository_extended.cpp
include/: fastrules.hpp  lua.hpp
scripts/: benchmark_compare.py  benchmark_json.py
src/: action_callback.cpp  aot_compiler.cpp  async_registry.cpp  async_workflow.cpp  c_api.cpp  execution_tracer.cpp  expression_validator.cpp  input_validator.cpp  logger.cpp  lua_backend_factory.cpp  lua_backend_luabridge.cpp  lua_backend_sol2.cpp  lua_engine.cpp  memory_pool.cpp  parameter_validator.cpp  performance_counters.cpp  rate_limiter.cpp  rule.cpp  rule_context.cpp  rule_versioning.cpp  sandbox.cpp  timeout_executor.cpp  work_stealing_thread_pool.cpp  workflow.cpp
stress/: CMakeLists.txt  core_stress.cpp  stress_helpers.hpp  stress_runner.hpp
test_cache/: 943309161393010586.frc
test_cache_advanced/: 4480448152988713445.frc
test_cache_complex/: 521740975328508238.frc
test_cache_functionality/: 1469876517339550492.frc
test_cache_persistence/: index.frc
test_package/: CMakeLists.txt  conanfile.txt
test_precompilation/: 3411977011797034294.frc  5901244706046827397.frc  8541961392455293016.frc
tests/: test_aot_compiler.cpp  test_aot_compiler_extended.cpp  test_async.cpp  test_async_integration.cpp  test_async_registry.cpp  test_auto_detection.cpp  test_benchmarks.cpp  test_caching.cpp  test_concurrent_compilation.cpp  test_coroutines.cpp  test_coverage_gaps.cpp  test_edge_cases.cpp  test_engine_pool.cpp  test_error_paths.cpp  test_execution_tracing.cpp  test_fuzz_expression.cpp  test_helpers.hpp  test_input_validator.cpp  test_input_validator_extended.cpp  test_lockfree_engine_pool.cpp  test_lua_engine.cpp  test_lua_engine_extended.cpp  test_main.cpp  test_memory_pool.cpp  test_memory_pool_extended.cpp  test_new_features.cpp  test_performance.cpp  test_rate_limiter.cpp  test_rule.cpp  test_rule_context.cpp  test_rule_result.cpp  test_sandbox.cpp  (+6 more)
(+72 files in other folders)
